--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,7 +4,7 @@
     --bg: #ffffff;
     --sidebar-bg: #fbfcfd;
     --chat-bg: #ededed;
-    --bubble-user: #00A884;
+    --bubble-user: #35a8e0;
     --bubble-bot: #ffffff;
     --text-primary: #000000;
     --text-secondary: #667781;
@@ -24,7 +24,7 @@
     --avatar-9: #90a4ae;
     --skeleton-bg: rgba(0,0,0,.02);   /* идеально прозрачный фон */
     --skeleton-radius: 8px;
-    --bubble-admin: #e3f1fd; /* голубой для исходящих */
+    --bubble-admin: #2596be; /* голубой для исходящих */
   }
 
   /* html[data-theme="dark"] */
@@ -32,7 +32,7 @@
     --bg: #0B141A;
     --sidebar-bg: #111B21;
     --chat-bg: #0B141A;
-    --bubble-user: #005C4B;
+    --bubble-user: #2296f3;
     --bubble-bot: #202C33;
     --text-primary: #E9EDEF;
     --text-secondary: #8696A0;
